--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,15 +1,69 @@
 ---
-title: Le Wagon - Middleman
+title: A lighter day
 ---
 
 <div id="home">
   <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
+    <%= image_tag "logo.jpeg" %>
     <p>
-      Middleman is now running!
+      A lighter day is now live !
     </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+   <!--  <p class="about">
+      <% link_to "About", "about.html" %>
+      <% link_to "Contact", "Contact.html" %>
+    </p> -->
   </div>
 </div>
+
+
+<div class="home-content">
+ <%= image_tag "img1.jpeg" %>
+</div>
+
+
+
+<div id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <ul class="list-inline">
+              <li class="list-inline-item"><a href="mailto:alighterday.nl@gmail.com"><i class="fa fa-envelope"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.facebook.com/A-lighter-day-160290201233678/"><i class="fa fa-facebook"></i></a></li>
+              <li  class="list-inline-item"><a href="http://pictaram.today/tag/alighterday"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+          </div>
+         <!--  <div class="col-xs-8 text-right">
+            <p>This was unicorn minivans</p>
+          </div> -->
+        </div>
+      </div>
+    </div>
+
+<style>
+
+.row {
+  justify-content: center;
+}
+
+#footer {
+  background: rgb(10, 10, 10);
+  padding: 30px 0;
+  color: #CCCCCC;
+  text-align: center;
+}
+#footer p {
+  margin-top: 17px;
+}
+#footer ul {
+  margin-top: 10px;
+}
+#footer a {
+  color: rgb(250, 250, 250);
+  font-size: 30px;
+  letter-spacing: 20px;
+  transition: color 0.5s ease;
+}
+#footer a:hover{
+  color: white;
+}
+</style>
