--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,68 +2,72 @@
 title: A lighter day
 ---
 
+
 <div id="home">
   <div class="home-content">
-    <%= image_tag "logo.jpeg" %>
-    <p>
-      A lighter day is now live !
-    </p>
-   <!--  <p class="about">
-      <% link_to "About", "about.html" %>
-      <% link_to "Contact", "Contact.html" %>
-    </p> -->
+    <div class="banner" style="background-image: linear-gradient(-225deg, rgba(255,255,1255,0.6) 0%, rgba(0,30,31,0) 50%), url(<%= image_path "banner.jpeg" %>);">
+          <div class="banner-content" style= "margin-bottom:350px">
+            <h1 style="text-align: center">A lighter day is now live !</h1>
+        <a class="btn btn-primary btn-lg">Learn more</a>
+      </div>
+    </div>
   </div>
 </div>
 
 
-<div class="home-content">
- <%= image_tag "img1.jpeg" %>
-</div>
 
 
 
-<div id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <ul class="list-inline">
-              <li class="list-inline-item"><a href="mailto:alighterday.nl@gmail.com"><i class="fa fa-envelope"></i></a></li>
-              <li class="list-inline-item"><a href="https://www.facebook.com/A-lighter-day-160290201233678/"><i class="fa fa-facebook"></i></a></li>
-              <li  class="list-inline-item"><a href="http://pictaram.today/tag/alighterday"><i class="fa fa-instagram"></i></a></li>
-            </ul>
-          </div>
-         <!--  <div class="col-xs-8 text-right">
-            <p>This was unicorn minivans</p>
-          </div> -->
-        </div>
-      </div>
-    </div>
+    <style>
 
-<style>
 
-.row {
-  justify-content: center;
-}
 
-#footer {
-  background: rgb(10, 10, 10);
-  padding: 30px 0;
-  color: #CCCCCC;
-  text-align: center;
+
+
+    .banner {
+      color: white;
+      text-align: center;
+      height: 100vh;
+      /* if you have a 70px navbar => height: calc(100vh - 70px); */
+      background-size: cover !important;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .banner h1 {
+      font-size: 50px;
+      font-weight: bold;
+      text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+    }
+    .banner p {
+      font-size: 25px;
+      font-weight: lighter;
+      color: rgb(255, 255, 255);
+      opacity: 0.6;
+      margin-bottom: 30px;
+    }
+    .btn-primary {
+      background-color: black;
+      color: white;
+      border-color: black;
+      opacity: 0.8;
+      border: 1px solid black;
+    }
+    .btn-primary:hover {
+      background-color: black;
+      border-color: black;
+      color: white;
+      opacity: 1;
+    }
+
+
+    /* Main footer starts  */
+
+
+    body {
+      position:relative;
+  font-family:'Roboto Mono', monospace;
 }
-#footer p {
-  margin-top: 17px;
-}
-#footer ul {
-  margin-top: 10px;
-}
-#footer a {
-  color: rgb(250, 250, 250);
-  font-size: 30px;
-  letter-spacing: 20px;
-  transition: color 0.5s ease;
-}
-#footer a:hover{
-  color: white;
-}
-</style>
+    /* Main footer stops  */
+
+  </style>
