--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,69 +5,21 @@ title: A lighter day
 
 <div id="home">
   <div class="home-content">
-    <div class="banner" style="background-image: linear-gradient(-225deg, rgba(255,255,1255,0.6) 0%, rgba(0,30,31,0) 50%), url(<%= image_path "banner.jpeg" %>);">
-          <div class="banner-content" style= "margin-bottom:350px">
-            <h1 style="text-align: center">A lighter day is now live !</h1>
-        <a class="btn btn-primary btn-lg">Learn more</a>
-      </div>
-    </div>
+    <%= partial "banner" %>
   </div>
+</div>
 </div>
 
 
 
 
-
-    <style>
-
+<style>
 
 
-
-
-    .banner {
-      color: white;
-      text-align: center;
-      height: 100vh;
-      /* if you have a 70px navbar => height: calc(100vh - 70px); */
-      background-size: cover !important;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .banner h1 {
-      font-size: 50px;
-      font-weight: bold;
-      text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-    }
-    .banner p {
-      font-size: 25px;
-      font-weight: lighter;
-      color: rgb(255, 255, 255);
-      opacity: 0.6;
-      margin-bottom: 30px;
-    }
-    .btn-primary {
-      background-color: black;
-      color: white;
-      border-color: black;
-      opacity: 0.8;
-      border: 1px solid black;
-    }
-    .btn-primary:hover {
-      background-color: black;
-      border-color: black;
-      color: white;
-      opacity: 1;
-    }
-
-
-    /* Main footer starts  */
-
-
-    body {
-      position:relative;
+body {
+  position:relative;
   font-family:'Roboto Mono', monospace;
 }
-    /* Main footer stops  */
 
-  </style>
+
+</style>
