--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,14 +12,11 @@ title: A lighter day
 
 
 
-
+ <%= partial "footer" %>
 <style>
-
-
 body {
   position:relative;
   font-family:'Roboto Mono', monospace;
 }
-
 
 </style>
