--- a/source/_banner.erb
+++ b/source/_banner.erb
@@ -1,7 +1,10 @@
- <div class="banner" style="background-image: linear-gradient(-225deg, rgba(255,255,1255,0.6) 0%, rgba(0,30,31,0) 50%), url(<%= image_path "banner.jpeg" %>);">
-  <div class="banner-content" style= "margin-bottom:350px">
-    <h1 style="text-align: center">A lighter day is now live !</h1>
-    <a class="btn btn-primary btn-lg">Learn more</a>
+ <div class="banner" style="background-image: linear-gradient(-225deg, rgba(255,255,1255,0.3) 0%, rgba(0,10,10,0) 50%), url(<%= image_path "banner.jpeg" %>);">
+  <div class="banner-content" style= "margin-bottom:150px">
+    <h1 style="text-align: center">
+    A Lighter Day - Giving Hope Through Haircuts.
+  </h1>
+    <a href="/contact.html" class="btn btn-primary btn-lg">Suscribe</a>
+
   </div>
 
 
@@ -18,12 +21,12 @@
     justify-content: center;
   }
   .banner h1 {
-    font-size: 50px;
+    font-size: 30px;
     font-weight: bold;
     text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   }
   .banner p {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: lighter;
     color: rgb(255, 255, 255);
     opacity: 0.6;
@@ -31,10 +34,11 @@
   }
   .btn-primary {
     background-color: black;
-    color: white;
+    text-color: white;
     border-color: black;
     opacity: 0.8;
     border: 1px solid black;
+    margin-top:20px;
   }
   .btn-primary:hover {
     background-color: black;
