--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,20 +1,108 @@
 
+<div id="home">
+
+<div class="banner">
+  <h1 class="text-center">
+    A Lighter Day - Giving Hope Through Haircuts.
+  </h1>
+</div>
+<div class= "text-center" style="padding:100px">
+    <p>
+      Hi! I'm Taylor Jardine. A Lighter Day is a project I created to restore confidence to those who lack support while I sharpen my skills as a barber in training. I've been travelling the world for for the last 10 years and the most authentic and heartfelt stories I've heard have been from the people I've met living on the streets. Something as simple as a haircut has the ability to make a transformative impact on someone's day, even their life. It's my goal to complete my barber apprenticeship so I can provide professional haircuts to the homeless, and continue to volunteer at shelters here in Amsterdam 2-3 days a week.
+      <p>
+
+        <h1>My Story</h1>
+
+        <p>As a carpenter originally from Melbourne Australia, I've always loved working with my hands and finding adventure through travel, but was craving a career that lead to a deeper connection and the feeling of giving back on a more personal level. Four months ago I arrived in Amsterdam and one night, I had a dream that I owned a barbershop. Through a series of events I met Paul Day, a man who I consider to be one of the best barbers in Amsterdam. He allowed me to shadow him at his studio, and to enhance my training and return the favor, I began volunteering at at the Rainbow Group, giving haircuts to those who I felt needed it the most. After seeing my passion and dedication, Paul offered me a formal apprenticeship, nothing short of an opportunity of a lifetime.</p>
+
+        <h1>Why do Haircuts Matter?</h1>
+
+        <p>Growing up I've seen firsthand what it's like to lose everything you've worked hard for and then lose the momentum to get back on track. I had a beautiful childhood, but things turned a bit sour around the age of 14. My father lost his job, and through that time his drinking worsened to the point where it was quite a dark time on my family. If it weren't for my mother working full-time as a nurse and supporting my Dad, he would have been homeless without a doubt.</p>
+
+        <p>There's a lot of misconception around homelessness and the difficulties many people have facing life's biggest challenges. Some think "Oh, if you really want to you can overcome the situation," but for some people it's not that simple. Mental illness, addiction, and lack of support, even in the simplest of situations, can be detrimental to a person's success through adversity. It's organizations like the Rainbow Group in Amsterdam who have the resources to step in and help people get back on their feet. It's an honor for me to be a part of that restoration of dignity, confidence, and self-worth.</p>
+      </div>
+    </div>
+</div>
 
 
-<div class="text-center" >
-<h1>A Lighter Day - Giving Hope Through Haircuts.</h1>
+<style>
 
-<p>Hi! I'm Taylor Jardine. A Lighter Day is a project I created to restore confidence to those who lack support while I sharpen my skills as a barber in training. I've been travelling the world for for the last 10 years and the most authentic and heartfelt stories I've heard have been from the people I've met living on the streets. Something as simple as a haircut has the ability to make a transformative impact on someone's day, even their life. It's my goal to complete my barber apprenticeship so I can provide professional haircuts to the homeless, and continue to volunteer at shelters here in Amsterdam 2-3 days a week.</p>
+  h1 {
+    font-size: 30px;
+    font-weight: bolder;
+    margin-bottom: 30px;
+    color: rgba(0,0,0,0.7);
+  }
+  h2 {
+    font-size: 17px;
+    font-weight: bold;
+    color: rgba(0,0,0,0.6);
+  }
+  a {
+    color: rgba(0,0,0,0.25);
+    font-weight: bold;
+    letter-spacing: -0.5px;
+    font-size: 15px;
+  }
+  .fa-heart {
+    color: #D23333;
+  }
+}
+
+    h2 {
+      font-size: 23px;
+      letter-spacing: -1px;
+    }
+    a {
+      text-decoration: none;
+      color: #666666;
+    }
+    a:hover {
+      text-decoration: none;
+      color: #333333;
+    }
+    .banner {
+      background-image: url("images/about.jpeg");
+      background-size: cover;
+      height:800px;
+      color: white;
+      text-align: center;
+    }
+
+    .banner  h1 {
+      font-size: 40px;
+      line-height: 1.3em;
+      padding-top:400px;
+      color:white;
+    }
+    .banner  p {
+      font-style: italic;
+      font-size: 19px;
+      letter-spacing: 1px;
+      font-height:2px;
+      line-height: 20px;
+    }
 
 
-<h1>My Story</h1>
 
-<p>As a carpenter originally from Melbourne Australia, I've always loved working with my hands and finding adventure through travel, but was craving a career that lead to a deeper connection and the feeling of giving back on a more personal level. Four months ago I arrived in Amsterdam and one night, I had a dream that I owned a barbershop. Through a series of events I met Paul Day, a man who I consider to be one of the best barbers in Amsterdam. He allowed me to shadow him at his studio, and to enhance my training and return the favor, I began volunteering at at the Rainbow Group, giving haircuts to those who I felt needed it the most. After seeing my passion and dedication, Paul offered me a formal apprenticeship, nothing short of an opportunity of a lifetime.</p>
+    @media(min-width: 320px){
+      .container {
+        width: 300px;
+      }
+    }
+    @media(min-width: 768px){
+      .container {
+        width: 500px;
+      }
+    }
+    @media(min-width: 900px){
+      .container {
+        width: 700px;
+      }
+    }
 
-<h1>Why do Haircuts Matter?</h1>
-
-<p>Growing up I've seen firsthand what it's like to lose everything you've worked hard for and then lose the momentum to get back on track. I had a beautiful childhood, but things turned a bit sour around the age of 14. My father lost his job, and through that time his drinking worsened to the point where it was quite a dark time on my family. If it weren't for my mother working full-time as a nurse and supporting my Dad, he would have been homeless without a doubt.</p>
-
-<p>There's a lot of misconception around homelessness and the difficulties many people have facing life's biggest challenges. Some think "Oh, if you really want to you can overcome the situation," but for some people it's not that simple. Mental illness, addiction, and lack of support, even in the simplest of situations, can be detrimental to a person's success through adversity. It's organizations like the Rainbow Group in Amsterdam who have the resources to step in and help people get back on their feet. It's an honor for me to be a part of that restoration of dignity, confidence, and self-worth.</p></div>
-
-
+body {
+  position:relative;
+  font-family:'Roboto Mono', monospace;
+}
+  </style>
