--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,8 +1,8 @@
 
 
+<div class="container-fluid">
 
-
-<section class="contact-wrap">
+<div class="contact-wrap">
   <form action="" class="contact-form">
     <div class="col-sm-6">
       <div class="input-block">
@@ -39,11 +39,17 @@
       <button class="square-button">Send</button>
     </div>
   </form>
-</section>
+</div>
+
+</div>
 
 
- <%= partial "footer" %>
+
 <style>
+
+.container-fluid {
+  height: 800px;
+}
 .contact-form{
     margin-top: 30px;
     .input-block{
