--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -30,7 +30,7 @@
   h1 {
     font-size: 30px;
     font-weight: bolder;
-    margin-bottom: 30px;
+
     color: rgba(0,0,0,0.7);
   }
   h2 {
@@ -44,9 +44,7 @@
     letter-spacing: -0.5px;
     font-size: 15px;
   }
-  .fa-heart {
-    color: #D23333;
-  }
+
 }
 
     h2 {
@@ -63,8 +61,8 @@
     }
     .banner {
       background-image: url("images/about.jpeg");
-      background-size: cover;
-      height:800px;
+      background-size: cover !important;
+      height:900px;
       color: white;
       text-align: center;
     }
@@ -102,7 +100,6 @@
     }
 
 body {
-  position:relative;
   font-family:'Roboto Mono', monospace;
 }
   </style>
