--- a/source/stylesheets/pages/_footer.scss
+++ b/source/stylesheets/pages/_footer.scss
@@ -4,10 +4,13 @@
     }
 
     #footer {
-      background: rgb(10, 10, 10);
+      background: black;
       padding: 30px 0;
-      color: #CCCCCC;
+      color: #CCCCC;
       text-align: center;
+      position:relative;
+      width:100%;
+      bottom: 0px;
     }
     #footer p {
       margin-top: 17px;
@@ -16,7 +19,7 @@
       margin-top: 10px;
     }
     #footer a {
-      color: rgb(250, 250, 250);
+      color: white;
       font-size: 30px;
       letter-spacing: 20px;
       transition: color 0.5s ease;
