--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,12 +1,12 @@
 
-<div id="home">
 
-<div class="banner">
-  <h1 class="text-center">
-    A Lighter Day - Giving Hope Through Haircuts.
-  </h1>
-</div>
-<div class= "text-center" style="padding:100px">
+
+
+   <div class="banner" style= "margin-top:70px" >
+    <%= image_tag "images/about.jpeg" %>
+  </div>
+<div class="container">
+  <div class= "text-center" style="padding:100px">
     <p>
       Hi! I'm Taylor Jardine. A Lighter Day is a project I created to restore confidence to those who lack support while I sharpen my skills as a barber in training. I've been travelling the world for for the last 10 years and the most authentic and heartfelt stories I've heard have been from the people I've met living on the streets. Something as simple as a haircut has the ability to make a transformative impact on someone's day, even their life. It's my goal to complete my barber apprenticeship so I can provide professional haircuts to the homeless, and continue to volunteer at shelters here in Amsterdam 2-3 days a week.
       <p>
@@ -22,84 +22,6 @@
         <p>There's a lot of misconception around homelessness and the difficulties many people have facing life's biggest challenges. Some think "Oh, if you really want to you can overcome the situation," but for some people it's not that simple. Mental illness, addiction, and lack of support, even in the simplest of situations, can be detrimental to a person's success through adversity. It's organizations like the Rainbow Group in Amsterdam who have the resources to step in and help people get back on their feet. It's an honor for me to be a part of that restoration of dignity, confidence, and self-worth.</p>
       </div>
     </div>
+  </div>
+
 </div>
-
-
-<style>
-
-  h1 {
-    font-size: 30px;
-    font-weight: bolder;
-
-    color: rgba(0,0,0,0.7);
-  }
-  h2 {
-    font-size: 17px;
-    font-weight: bold;
-    color: rgba(0,0,0,0.6);
-  }
-  a {
-    color: rgba(0,0,0,0.25);
-    font-weight: bold;
-    letter-spacing: -0.5px;
-    font-size: 15px;
-  }
-
-}
-
-    h2 {
-      font-size: 23px;
-      letter-spacing: -1px;
-    }
-    a {
-      text-decoration: none;
-      color: #666666;
-    }
-    a:hover {
-      text-decoration: none;
-      color: #333333;
-    }
-    .banner {
-      background-image: url("images/about.jpeg");
-      background-size: cover !important;
-      height:900px;
-      color: white;
-      text-align: center;
-    }
-
-    .banner  h1 {
-      font-size: 40px;
-      line-height: 1.3em;
-      padding-top:400px;
-      color:white;
-    }
-    .banner  p {
-      font-style: italic;
-      font-size: 19px;
-      letter-spacing: 1px;
-      font-height:2px;
-      line-height: 20px;
-    }
-
-
-
-    @media(min-width: 320px){
-      .container {
-        width: 300px;
-      }
-    }
-    @media(min-width: 768px){
-      .container {
-        width: 500px;
-      }
-    }
-    @media(min-width: 900px){
-      .container {
-        width: 700px;
-      }
-    }
-
-body {
-  font-family:'Roboto Mono', monospace;
-}
-  </style>
