contact page and form working

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,46 +1,27 @@
 
 
-<div class="container-fluid">
+  <section id="hire">
+    <h1>Contact us</h1>
 
-  <div class="contact-wrap">
-    <form action="" class="contact-form">
-      <div class="col-sm-6">
-        <div class="input-block">
-          <label for="">First Name</label>
-          <input type="text" class="form-control">
+    <form>
+        <div class="field name-box">
+            <input type="text" id="name" placeholder="Who Are You?"/>
+            <label for="name">Name</label>
+            <span class="ss-icon">check</span>
         </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="input-block">
-          <label for="">Last Name</label>
-          <input type="text" class="form-control">
-        </div>
-      </div>
-      <div class="col-sm-12">
-        <div class="input-block">
-          <label for="">Email</label>
-          <input type="text" class="form-control">
-        </div>
-      </div>
-      <div class="col-sm-12">
-        <div class="input-block">
-          <label for="">Message Subject</label>
-          <input type="text" class="form-control">
-        </div>
-      </div>
-      <div class="col-sm-12">
-        <div class="input-block textarea">
-          <label for="">Drop your message here</label>
-          <textarea rows="3" type="text" class="form-control"></textarea>
-        </div>
-      </div>
-      <br>
-      <div class="col-sm-12">
-        <button class="square-button">Send</button>
-      </div>
-    </form>
-  </div>
-</div>
 
+        <div class="field email-box">
+            <input type="text" id="email" placeholder="name@email.com"/>
+            <label for="email">Email</label>
+            <span class="ss-icon">check</span>
+        </div>
 
+        <div class="field msg-box">
+            <textarea id="msg" rows="4" placeholder="Your message goes here..."/></textarea>
+            <label for="msg">Msg</label>
+            <span class="ss-icon">check</span>
+        </div>
 
+        <input class="button" type="submit" value="Send" />
+  </form>
+</section>
