--- a/source/stylesheets/pages/_contact.scss
+++ b/source/stylesheets/pages/_contact.scss
@@ -1,131 +1,192 @@
-.container-fluid {
-  height: 800px;
-}
-.contact-form{
-    margin-top: 30px;
-    .input-block{
-        background-color: rgba(white, .8);
-        // border: solid 1px $primary-color;
-        width: 100%;
-        height: 60px;
-        padding: 25px;
-        position: relative;
-        margin-bottom: 20px;
-        @include transition(all 0.3s ease-out);
-        &.focus{
-            // background-color: $form-bg;
-            // border: solid 1px darken($primary-color, 10%);
-        }
-        &.textarea{
-            height: auto;
-            .form-control{
-                height: auto;
-                resize: none;
-            }
-        }
-        label{
-            position: absolute;
-            left: 25px;
-            top: 25px;
-            display: block;
-            margin: 0;
-            font-weight: 300;
-            z-index: 1;
-            // color: $secondary-color;
-            font-size: 18px;
-            line-height: 10px;
-        }
-        .form-control{
-            background-color: transparent;
-            padding: 0;
-            border: none;
-            // @include border-radius(0);
-            // @include box-shadow(none);
-            height: auto;
-            position: relative;
-            z-index: 2;
-            font-size: 18px;
-            // color: $secondary-color;
-        }
-        .form-control:focus{
-            label{
-                top: 0;
-            }
-        }
-    }
-    .square-button{
-        background-color: rgba(white, .8);
-        // color: darken($primary-color, 10%);
-        font-size: 26px;
-        text-transform: uppercase;
-        font-weight: 700;
-        text-align: center;
-        // @include border-radius(2px);
-        // @include transition(all 0.3s ease);
-        padding: 0 60px;
-        height: 60px;
-        border: none;
-        width: 100%;
-        &:hover,
-        &:focus{
-            background-color: white;
-        }
-    }
+// Grid
+@mixin grid($column) {
+    width:(100% / 12) * $column;
+    margin:0 auto;
 }
 
-
-@media (min-width: 768px) {
-  .contact-wrap{
-    width: 60%;
-    margin: auto;
-  }
+// Transition Ease
+@mixin ease($time:333ms, $attr:all, $curve:ease-in-out) {
+    -webkit-transition: $attr $time $curve;
+    -moz-transition: $attr $time $curve;
+    -o-transition: $attr $time $curve;
+    -ms-transition: $attr $time $curve;
+    transition: $attr $time $curve;
 }
 
+//-- Lato --//
+@mixin lato-1 {font-family: 'Lato', sans-serif; font-weight:100;}
+@mixin lato-1-i {@include lato-1; font-style:italic;}
+
+@mixin lato-3 {font-family: 'Lato', sans-serif; font-weight:300;}
+@mixin lato-3-i {@include lato-3; font-style:italic;}
+
+@mixin lato-4 {font-family: 'Lato', sans-serif; font-weight:400;}
+@mixin lato-4-i {@include lato-4; font-style:italic;}
+
+@mixin lato-7 {font-family: 'Lato', sans-serif; font-weight:700;}
+@mixin lato-7-i {@include lato-7; font-style:italic;}
+
+@mixin lato-9 {font-family: 'Lato', sans-serif; font-weight:900;}
+@mixin lato-9-i {@include lato-9; font-style:italic;}
 
 
-.contact-wrap{
-  padding: 15px;
-}
+// Colors
+$blue:#313A3D;
+$orange:#FD9638;
+$dark-orange:darken($orange, 20%);
+$grey:#B6B6B6;
+$light-grey:lighten($grey, 15%);
 
-h1{
+$background:#efefef;
+$field-color:#E8E9EA;
 
- font-family: monospace;
-  padding: 40px;
-  margin: 0 0 50px;
-  font-size: 30px;
-  text-transform: uppercase;
-  font-weight: 700;
-  text-align: center;
-  small{
-    font-size: 18px;
-    display: block;
-    text-transform: none;
-    font-weight: 300;
-    margin-top: 10px;
-    // color: lighten($primary-color, 10%);
-  }
-}
 
-.made-with-love{
-  margin-top: 40px;
-  padding: 10px;
-  clear: left;
-  text-align: center;
-  font-size: 10px;
-  font-family: arial;
-  color: #fff;
-  i{
-    font-style: normal;
-    color: #F50057;
-    font-size: 14px;
-    position: relative;
-    top: 2px;
-  }
-  a{
-    color: #fff;
-    text-decoration: none;
-    &:hover{
-      text-decoration: underline;
+
+
+
+body {
+    background:$background;
+    font-size:62.5%;
+    @include lato-3;
+    color:$grey;
+
+  section {
+    background:white;
+    margin:60px auto 120px;
+    // border:2px solid $blue;
+    text-align:center;
+    padding:50px 0 110px;
+    width:80%;
+    max-width:1100px;
+
+    h1 {
+      margin-bottom:40px;
+      font-size:4em;
+      text-transform:uppercase;
+      @include lato-1;
     }
   }
 }
+
+// Form
+form {
+      @include grid(7);
+
+      .field {
+          width:100%;
+          position:relative;
+          margin-bottom:15px;
+
+          $hover-label-width:18%;
+          $placeholder-bumper:1.5%;
+          $label-padding:18px;
+
+          // Label
+          label {
+              text-transform: uppercase;
+              position:absolute;
+              top:0;
+              left:0;
+              background:$blue;
+              width:100%;
+              padding:($label-padding + 0px) 0;
+              font-size: 1.45em;
+              letter-spacing: 0.075em;
+
+              @include ease(333ms);
+
+              // Checkmark
+              + span {
+                  font-family: 'SSStandard';
+                  opacity: 0;
+                  color:white;
+                  display: block;
+                  position:absolute;
+                  top: 12px;
+                  left: 7%;
+                  font-size: 2.5em;
+                  text-shadow:1px 2px 0 $dark-orange;
+
+                  @include ease(333ms);
+              }
+          }
+
+          // Fields
+          input[type="text"],
+          textarea {
+              border:none;
+              background:$field-color;
+              width:100% - $hover-label-width - $placeholder-bumper;
+              margin:0;
+              padding:$label-padding 0;
+              padding-left:$hover-label-width + $placeholder-bumper;
+              color:$blue;
+              font-size: 1.4em;
+              letter-spacing: 0.05em;
+              text-transform: uppercase;
+
+              &#msg {
+                  height: 18px;
+                  resize: none;
+                  @include ease(333ms);
+              }
+
+              // Focus and JS Toggle Class
+              &:focus,
+              &.focused {
+                  outline:none;
+
+                  &#msg {
+                      padding-bottom:150px;
+                  }
+
+                  + label {
+                      width:$hover-label-width;
+                      background:black;
+                      color:white;
+                  }
+              }
+
+              // JS Toggle Class
+              &.focused {
+                  + label {
+                      color: white;
+                  }
+              }
+          }
+
+          // Field Hover
+          &:hover {
+              label {
+                  width:$hover-label-width;
+                  background:black;
+                  color:white;
+              }
+          }
+      }
+
+      // Submit Button
+      input[type="submit"] {
+          background:$blue;
+          color:white;
+          -webkit-appearance: none;
+          border: none;
+          text-transform: uppercase;
+          position:relative;
+        padding: 13px 50px;
+        font-size: 1.4em;
+        letter-spacing: 0.1em;
+        @include lato-3;
+        @include ease;
+
+          &:hover {
+              background:black;
+              color:white;
+          }
+
+          &:focus {
+              outline:none;
+              background:white;
+          }
+      }
+  }
