--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -4,11 +4,11 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm6">
-      <div class= "text-center" style="padding:100px">
-        <p>
+    <div class="col-xs-12">
+      <div class= "description text-center" style="padding:100px">
+        <h1>
           Hi! I'm Taylor Jardine.
-        </p>
+        </h1>
         <p>A Lighter Day is a project I created to restore confidence to those who lack support while I sharpen my skills as a barber in training. I've been travelling the world for for the last 10 years and the most authentic and heartfelt stories I've heard have been from the people I've met living on the streets. Something as simple as a haircut has the ability to make a transformative impact on someone's day, even their life. It's my goal to complete my barber apprenticeship so I can provide professional haircuts to the homeless, and continue to volunteer at shelters here in Amsterdam 2-3 days a week.
           <p>
 
@@ -25,5 +25,19 @@
         </div>
       </div>
     </div>
+  </div>
+
+<div>
+<div id="cssSlider">
+  <div id="sliderImages">
+    <img id="si_1" src="img1.jpeg" alt="" />
+    <img id="si_2" src="http://f.cybrox.eu/codepen/slider/slide2.jpg" alt="" />
+    <img id="si_3" src="http://f.cybrox.eu/codepen/slider/slide3.jpg" alt="" />
+    <img id="si_4" src="http://f.cybrox.eu/codepen/slider/slide4.jpg" alt="" />
+    <img id="si_5" src="http://f.cybrox.eu/codepen/slider/slide5.jpg" alt="" />
+    <div style="clear:left;"></div>
+  </div>
+</div>
+
   </div>
 </div>
