--- a/source/stylesheets/pages/_contact.scss
+++ b/source/stylesheets/pages/_contact.scss
@@ -60,8 +60,8 @@ body {
     max-width:1100px;
 
     h1 {
-      margin-bottom:40px;
-      font-size:4em;
+      // margin-bottom:40px;
+      // font-size:4em;
       text-transform:uppercase;
       @include lato-1;
     }
