--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -8,6 +8,9 @@
       padding: 30px 0;
       color: white;
       text-align: center;
+      position:absolute;
+      bottom: 0;
+      width: 100%;
 
     }
     #footer p {
