adding the gallery page in navbar

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,12 +4,9 @@ title: A lighter day
 
 
 <div id="home">
-  <div class="home-content">
+<!--   <div class="home-content"> -->
     <%= partial "banner" %>
-  </div>
+<!--   </div> -->
 </div>
-</div>
-
-
 
 
