--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -5,7 +5,9 @@
   </div>
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <a href="/about.html" class="navbar-wagon-item navbar-wagon-link">About</a>
+      <a href="/gallery.html" class="navbar-wagon-item navbar-wagon-link">Gallery</a>
     <a href="/contact.html" class="navbar-wagon-item navbar-wagon-link">Contact</a>
+
   </div>
 </div>
 
