--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -13,6 +13,7 @@
 // }
 p {
   font-size: 18px;
+  line-height: 25px;
 
 }
 
@@ -24,9 +25,16 @@ p {
 }
 
 body {
-    padding-top: 40px;
-    min-height: 2000px;
+    padding-top: 50px;
+    min-height: 1600px;
     color:white;
+}
+
+
+#container {
+  margin: 60px 50px;
+
+
 }
 
 
@@ -35,14 +43,17 @@ body {
     width: 100%;
     margin: 0 auto;
     padding: 50px;
+    border-radius:5px;
 }
 
 .box--one {
-    background-color: grey;
+    background-color: black;
+    color:white;
 }
 
 .box--two {
-    background-color: black;
+    background-color:white;
     position: relative;
+    color:black;
     z-index: 1;
 }
