--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -9,8 +9,8 @@
       color: white;
       text-align: center;
       position:absolute;
-      bottom: 0;
       width: 100%;
+      bottom: -70px;
 
     }
     #footer p {
