--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -25,7 +25,7 @@
 </div>
 </div>
 </div>
-<script>
+<!-- <script>
 
   $(document).ready(function() {
     $(window).on('scroll', function() {
@@ -36,7 +36,7 @@
         });
     });
 });
-</script>
+</script> -->
 
 
 
