commit last time work

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,9 +4,11 @@ title: A lighter day
 
 
 <div id="home">
-<!--   <div class="home-content"> -->
     <%= partial "banner" %>
-<!--   </div> -->
 </div>
 
+<div id="container" style="display:flex">
+    <div class="element">Elément 1</div>
+    <div class="element">Elément 2</div>
+</div>
 
