--- a/source/gallery.html.erb
+++ b/source/gallery.html.erb
@@ -14,7 +14,7 @@
         <img src="images/img5.jpg" alt="" style="width: 100%">
       </div>
       <div class="slide">
-        <img src="images/img.jpg" alt="" style="width: 100%">
+        <img src="images/img6.jpg" alt="" style="width: 100%">
       </div>
     </div>
   </div>
