--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -26,14 +26,13 @@ p {
 
 body {
     padding-top: 50px;
-    min-height: 1600px;
+    min-height: 100vh;
     color:white;
 }
 
 
 #container {
   margin: 60px 50px;
-
 
 }
 
