--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -4,9 +4,9 @@
   <div class="logo"> <a href="/"><%= image_tag "logo.jpeg", width:"80px" %></a>
   </div>
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-    <a href="/about.html" class="navbar-wagon-item navbar-wagon-link">About</a>
-      <a href="/gallery.html" class="navbar-wagon-item navbar-wagon-link">Gallery</a>
-    <a href="/contact.html" class="navbar-wagon-item navbar-wagon-link">Contact</a>
+    <a href="/a-lighter-day/about.html" class="navbar-wagon-item navbar-wagon-link">About</a>
+      <a href="/a-lighter-day/gallery.html" class="navbar-wagon-item navbar-wagon-link">Gallery</a>
+    <a href="a-lighter-day/contact.html" class="navbar-wagon-item navbar-wagon-link">Contact</a>
 
   </div>
 </div>
