--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -1,7 +1,7 @@
 
 <div class="navbar-wagon">
 
-  <div class="logo"> <a href="/"><%= image_tag "logo.jpeg", width:"80px" %></a>
+  <div class="logo"> <a href="/a-lighter-day"><%= image_tag "logo.jpeg", width:"80px" %></a>
   </div>
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <a href="/a-lighter-day/about.html" class="navbar-wagon-item navbar-wagon-link">About</a>
