--- a/source/gallery.html.erb
+++ b/source/gallery.html.erb
@@ -8,13 +8,26 @@
         <img src="images/img1.jpeg" alt="" style="width: 100%">
       </div>
       <div class="slide">
+        <img src="images/img2.jpg" alt="" style="width: 100%">
+      </div>
+       <div class="slide">
         <img src="images/img3.jpg" alt="" style="width: 100%">
       </div>
+      <div class="slide">
+        <img src="images/img4.jpg" alt="" style="width: 100%">
+      </div>
+
       <div class="slide">
         <img src="images/img5.jpg" alt="" style="width: 100%">
       </div>
       <div class="slide">
         <img src="images/img6.jpg" alt="" style="width: 100%">
+      </div>
+      <div class="slide">
+        <img src="images/img7.jpg" alt="" style="width: 100%">
+      </div>
+      <div class="slide">
+        <img src="images/img8.jpg" alt="" style="width: 100%">
       </div>
     </div>
   </div>
