--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -1,27 +1,25 @@
 
 <div class="navbar-wagon">
-
   <div class="logo"> <a href="/a-lighter-day"><%= image_tag "logo.jpeg", width:"80px" %></a>
   </div>
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-    <a href="/a-lighter-day/about.html" class="navbar-wagon-item navbar-wagon-link">About</a>
-      <a href="/a-lighter-day/gallery.html" class="navbar-wagon-item navbar-wagon-link">Gallery</a>
+    <a href="/about.html" class="navbar-wagon-item navbar-wagon-link">About</a>
+    <a href="/a-lighter-day/gallery.html" class="navbar-wagon-item navbar-wagon-link">Gallery</a>
     <a href="a-lighter-day/contact.html" class="navbar-wagon-item navbar-wagon-link">Contact</a>
 
   </div>
-</div>
 
 
-<!-- Dropdown appearing on mobile only -->
+  <!-- Dropdown appearing on mobile only -->
   <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Host</a></li>
+        <li><a href="/about.html">About</a></li>
         <li><a href="#">Trips</a></li>
         <li><a href="#">Messagese</a></li>
       </ul>
     </div>
   </div>
 </div>
-
+</div>
