--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -11,16 +11,13 @@
 // .description p{
 //   font-size:18px;
 // }
+
 p {
   font-size: 18px;
   line-height: 25px;
-
 }
 
-
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
@@ -30,29 +27,38 @@ body {
     color:white;
 }
 
-
-#container {
-  margin: 60px 50px;
-
-}
-
-
-
 .box {
-    width: 100%;
-    margin: 0 auto;
-    padding: 50px;
-    border-radius:5px;
+  width: 100%;
+  padding: 100px 50px;
+  border-radius:5px;
 }
 
 .box--one {
-    background-color: black;
-    color:white;
+  background-color: black;
+  color:white;
 }
 
 .box--two {
-    background-color:white;
-    position: relative;
-    color:black;
-    z-index: 1;
+  background-color:white;
+  color:black;
+}
+
+.top-margin {
+  margin-top: 50px;
+}
+
+.description {
+  text-align: justify;
+}
+
+.img-box {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
+.centered-img {
+  border-radius: 5px;
 }
