new design about page, removed excess margin on the right

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,5 +1,8 @@
-<div class="container-fluid" style="padding-left: 15px; padding-right: 0 !important; margin-right: 0 !important;">
+<div class="pontainer">
   <div class="row box box--one">
+    <div class="col-sm-12 col-md-6 img-box">
+      <img src="https://unsplash.it/300/300" class="centered-img" alt="">
+    </div>
     <div class="col-sm-12 col-md-6">
       <div class="description">
         <h1>
@@ -9,14 +12,8 @@
         </p>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 img-box">
-      <img src="https://unsplash.it/300/300" class="centered-img" alt="">
-    </div>
   </div>
   <div class="row box box--two">
-    <div class="col-sm-12 col-md-6 img-box">
-      <img src="https://unsplash.it/300/300" class="centered-img" alt="">
-    </div>
     <div class="col-sm-12 col-md-6 description">
       <h1>
         My Story
@@ -25,8 +22,14 @@
         As a carpenter originally from Melbourne Australia, I've always loved working with my hands and finding adventure through travel, but was craving a career that lead to a deeper connection and the feeling of giving back on a more personal level. Four months ago I arrived in Amsterdam and one night, I had a dream that I owned a barbershop. Through a series of events I met Paul Day, a man who I consider to be one of the best barbers in Amsterdam. He allowed me to shadow him at his studio, and to enhance my training and return the favor, I began volunteering at at the Rainbow Group, giving haircuts to those who I felt needed it the most. After seeing my passion and dedication, Paul offered me a formal apprenticeship, nothing short of an opportunity of a lifetime.
       </p>
     </div>
+    <div class="col-sm-12 col-md-6 img-box">
+      <img src="https://unsplash.it/300/300" class="centered-img" alt="">
+    </div>
   </div>
   <div class="row box box--one">
+    <div class="col-sm-12 col-md-6 img-box">
+      <img src="https://unsplash.it/300/300" class="centered-img" alt="">
+    </div>
     <div class="col-sm-12 col-md-6 description">
       <h1>
         Why do Haircuts Matter?
@@ -35,18 +38,15 @@
       <p>
       Growing up I've seen firsthand what it's like to lose everything you've worked hard for and then lose the momentum to get back on track. I had a beautiful childhood, but things turned a bit sour around the age of 14. My father lost his job, and through that time his drinking worsened to the point where it was quite a dark time on my family. If it weren't for my mother working full-time as a nurse and supporting my Dad, he would have been homeless without a doubt. </p>
     </div>
+  </div>
+  <div class="row box box--two">
+    <div class="col-sm-12 col-md-6 description">
+      <p>
+        There's a lot of misconception around homelessness and the difficulties many people have facing life's biggest challenges. Some think "Oh, if you really want to you can overcome the situation," but for some people it's not that simple. Mental illness, addiction, and lack of support, even in the simplest of situations, can be detrimental to a person's success through adversity. It's organizations like the Rainbow Group in Amsterdam who have the resources to step in and help people get back on their feet. It's an honor for me to be a part of that restoration of dignity, confidence, and self-worth.
+      </p>
+    </div>
     <div class="col-sm-12 col-md-6 img-box">
       <img src="https://unsplash.it/300/300" class="centered-img" alt="">
-    </div>
-    <div class="top-margin">
-      <div class="col-sm-12 col-md-6 img-box">
-        <img src="https://unsplash.it/300/300" class="centered-img" alt="">
-      </div>
-      <div class="col-sm-12 col-md-6 description">
-        <p>
-          There's a lot of misconception around homelessness and the difficulties many people have facing life's biggest challenges. Some think "Oh, if you really want to you can overcome the situation," but for some people it's not that simple. Mental illness, addiction, and lack of support, even in the simplest of situations, can be detrimental to a person's success through adversity. It's organizations like the Rainbow Group in Amsterdam who have the resources to step in and help people get back on their feet. It's an honor for me to be a part of that restoration of dignity, confidence, and self-worth.
-        </p>
-      </div>
     </div>
   </div>
 </div>
