--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -28,7 +28,6 @@ body {
 }
 
 .box {
-  width: 100%;
   padding: 100px 50px;
   border-radius:5px;
 }
@@ -61,4 +60,8 @@ body {
 }
 .centered-img {
   border-radius: 5px;
+}
+
+.pontainer {
+  width: 100%;
 }
