--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -7,7 +7,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 // @import "font-awesome-sprockets";
-@import "font-awesome.css";
+// @import "font-awesome.css";
 
 // Your CSS partials
 @import "layouts/index";
