--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -17,13 +17,21 @@
   <!-- Dropdown appearing on mobile only -->
   <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+      <i class="fa fa-bars dropdown-foggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="/about.html">About</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Messagese</a></li>
+        <li><a href="/a-lighter-day/about.html">About</a></li>
+        <li><a href="/a-lighter-day/gallery.html">Gallery</a></li>
+        <li><a href="a-lighter-day/contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </div>
 </div>
+
+
+<script>
+
+$(document).ready(function() {
+    $(".dropdown-foggle").dropdown();
+});
+</script>
