--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,7 +1,7 @@
 <div class="pontainer">
   <div class="row box box--one">
     <div class="col-sm-12 col-md-6 img-box">
-      <img src="https://unsplash.it/300/300" class="centered-img" alt="">
+      <img src="<%= image_path 'img6.jpg' %>" class="centered-img" alt="" style="width: 400px;">
     </div>
     <div class="col-sm-12 col-md-6">
       <div class="description">
@@ -23,12 +23,12 @@
       </p>
     </div>
     <div class="col-sm-12 col-md-6 img-box">
-      <img src="https://unsplash.it/300/300" class="centered-img" alt="">
+      <img src="<%= image_path 'img8.jpg' %>" class="centered-img" style="width: 400px;" alt="">
     </div>
   </div>
   <div class="row box box--one">
     <div class="col-sm-12 col-md-6 img-box">
-      <img src="https://unsplash.it/300/300" class="centered-img" alt="">
+      <img src="<%= image_path 'img9.jpg' %>" class="centered-img" style="width: 400px;" alt="">
     </div>
     <div class="col-sm-12 col-md-6 description">
       <h1>
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="col-sm-12 col-md-6 img-box">
-      <img src="https://unsplash.it/300/300" class="centered-img" alt="">
+      <img src="<%= image_path 'img4.jpg' %>" class="centered-img" style="width: 400px;" alt="">
     </div>
   </div>
 </div>
