--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,10 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+
   <meta name="viewport"
   content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Spectral+SC" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Dosis|Muli" rel="stylesheet">
+
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Spectral+SC" rel="stylesheet"> -->
+
   <script src="https://use.fontawesome.com/9484b7cad0.js"></script>
   <title><%= current_page.data.title %></title>
   <%= stylesheet_link_tag "application" %>
