--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -14,11 +14,26 @@
 @import "components/index";
 @import "pages/index";
 
+p {
+  font-size: 20px;
+  line-height: 29px;
+  font-family: 'Muli', sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+}
 
 body {
-  font-family: 'Roboto Mono', monospace;
+  padding-top: 50px;
+  min-height: 100vh;
+  color:white;
   position: relative;
   max-width: 100%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Dosis', sans-serif;
 }
 
 #footer{
