--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -3,7 +3,10 @@
   <section id="hire">
     <h1>Contact us</h1>
 
-    <form>
+
+
+    <form action="https://formspree.io/alighterday.nl@gmail.com"
+      method="POST">
         <div class="field name-box">
             <input type="text" id="name" placeholder="Who Are You?"/>
             <label for="name">Name</label>
@@ -11,7 +14,7 @@
         </div>
 
         <div class="field email-box">
-            <input type="text" id="email" placeholder="name@email.com"/>
+            <input type="text" id="email" name="_replyto" placeholder="name@email.com"/>
             <label for="email">Email</label>
             <span class="ss-icon">check</span>
         </div>
