--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -8,7 +8,7 @@
     </a>
     <a href="/a-lighter-day/gallery.html" class="navbar-wagon-item navbar-wagon-link">    Gallery
     </a>
-    <a href="a-lighter-day/contact.html" class="navbar-wagon-item navbar-wagon-link">   Contact
+    <a href="/a-lighter-day/contact.html" class="navbar-wagon-item navbar-wagon-link">   Contact
     </a>
 
   </div>
@@ -21,7 +21,7 @@
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="/a-lighter-day/about.html">About</a></li>
         <li><a href="/a-lighter-day/gallery.html">Gallery</a></li>
-        <li><a href="a-lighter-day/contact.html">Contact</a></li>
+        <li><a href="/a-lighter-day/contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
