--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -8,7 +8,7 @@
     </a>
     <a href="/a-lighter-day/gallery.html" class="navbar-wagon-item navbar-wagon-link">    Gallery
     </a>
-    <a href="a-lighter-day/contact.html" class="navbar-wagon-item navbar-wagon-link">   Contact
+    <a href="/a-lighter-day/contact.html" class="navbar-wagon-item navbar-wagon-link">   Contact
     </a>
 
   </div>
