--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -26,7 +26,7 @@
       <img src="<%= image_path 'img8.jpg' %>" class="centered-img" style="width: 400px;" alt="">
     </div>
   </div>
-  <div class="row box box--one">
+  <div class="row box box--three">
     <div class="col-sm-12 col-md-6 img-box">
       <img src="<%= image_path 'img9.jpg' %>" class="centered-img" style="width: 400px;" alt="">
     </div>
@@ -39,7 +39,7 @@
       Growing up I've seen firsthand what it's like to lose everything you've worked hard for and then lose the momentum to get back on track. I had a beautiful childhood, but things turned a bit sour around the age of 14. My father lost his job, and through that time his drinking worsened to the point where it was quite a dark time on my family. If it weren't for my mother working full-time as a nurse and supporting my Dad, he would have been homeless without a doubt. </p>
     </div>
   </div>
-  <div class="row box box--two">
+  <div class="row box box--four">
     <div class="col-sm-12 col-md-6 description">
       <p>
         There's a lot of misconception around homelessness and the difficulties many people have facing life's biggest challenges. Some think "Oh, if you really want to you can overcome the situation," but for some people it's not that simple. Mental illness, addiction, and lack of support, even in the simplest of situations, can be detrimental to a person's success through adversity. It's organizations like the Rainbow Group in Amsterdam who have the resources to step in and help people get back on their feet. It's an honor for me to be a part of that restoration of dignity, confidence, and self-worth.
